--- a/index.html
+++ b/index.html
@@ -107,11 +107,14 @@
     </section>
 <footer>
     <section class="container">
+        <div class="logo">
+            <img src="./Asset/case.png" alt="">
+        </div>
         <div class="konten">
-            <div class="1"></div>
-            <div class="2"></div>
-            <div class="3"></div>
-            <div class="4"></div>
+            <div class="satu"> <p>CASA in Action, a 501(c)(4) organization, is the foremost Latino and immigrant organization in the Mid-Atlantic region and a national leader in supporting immigrant families and ensuring that all individuals have the core supports necessary for full participation in society</p><br>CASA in Action and CASA in Action PAC endorse candidates that advance its membership’s priorities and facilitates greater engagement of Latinos and voters of color in elections.</div>
+            <div class="satu"><h1>About</h1><br>About <br> states <br> Donate to CASA in Action's Virginia and payllll work <br>Donate to CASA in Action's Virginia and payllll work <br><button>Contact</button></div>
+            <div class="satu"><h1>Get Involped</h1>Pennsylvania <br>Maryland <br>Virginia <br>National</div>
+            <div class="satu"><h1>Get Informed</h1>Press Room <br>Updates</div>
     </section>
 </footer>
 </body>
